[gd_scene load_steps=33 format=3 uid="uid://cok6gvdxjgywq"]

[ext_resource type="Script" uid="uid://bfu4xs3tyne55" path="res://scripts/Character.gd" id="1_7ig0a"]
[ext_resource type="Script" uid="uid://byikc5yvpboxi" path="res://scripts/Attributes/PlayerStats.gd" id="2_dfeyu"]
[ext_resource type="Texture2D" uid="uid://civ78vvr3tkx5" path="res://assets/placeholder_character.jpg" id="2_lcuhw"]
[ext_resource type="Script" uid="uid://c1fthtfbmc1rp" path="res://scripts/States/StateMachine.gd" id="3_rguqb"]
[ext_resource type="Script" uid="uid://b584csyxnnyk8" path="res://scripts/States/Idle_State.gd" id="4_fwsyb"]
[ext_resource type="Script" path="res://scenes/kenly_sprite.gd" id="4_q6urs"]
[ext_resource type="Script" uid="uid://dnvtpbhkddiyk" path="res://scripts/States/Running_State.gd" id="5_25pii"]
[ext_resource type="Script" uid="uid://4g2vde2305m7" path="res://scripts/States/Jumping_State.gd" id="6_exdhi"]
[ext_resource type="Script" uid="uid://cjyq8fcyxoh4v" path="res://scripts/States/Falling_State.gd" id="7_25pii"]
[ext_resource type="Script" uid="uid://dp74djouk71ts" path="res://scripts/StatusEffects/Status_Effect_Manager.gd" id="8_exdhi"]
[ext_resource type="Script" path="res://scripts/States/Attack_Script.gd" id="9_r68wp"]
[ext_resource type="Script" uid="uid://lbreutrqdu6t" path="res://scripts/Health/health.gd" id="9_r87yu"]
[ext_resource type="Script" path="res://scripts/States/Gliding_State.gd" id="10_lkiy7"]
[ext_resource type="Script" path="res://scripts/shooting_state.gd" id="12_356g5"]
[ext_resource type="PackedScene" uid="uid://3ixrip08xoeh" path="res://fairy_bullet.tscn" id="13_356g5"]
[ext_resource type="Texture2D" uid="uid://be4vuo0hak4m" path="res://assets/placeholder128.png" id="14_4yo34"]
[ext_resource type="Texture2D" uid="uid://d1bsqlqgynylv" path="res://assets/pixie_dust.png" id="14_ftwfq"]
[ext_resource type="Texture2D" uid="uid://cwp70fy0evvs8" path="res://assets/WoltyIdle.PNG" id="11_r68wp"]
[ext_resource type="Texture2D" uid="uid://cgx1qhx4tmbq4" path="res://assets/WoltyRun.PNG" id="12_lkiy7"]

[sub_resource type="Resource" id="Resource_r68wp"]
script = ExtResource("2_dfeyu")
_acceleration = 50.0
_deacceleration = 100.0
max_speed = 300.0
in_air_acceleration = 20.0
in_air_deacceleration = 20.0
jump_force = -450.0
_gravity = 1000.0
falling_gravity = 2000.0
coyote_time = 0.1
jump_buffer_time = 0.1
variable_jump_multiplier = 0.5
max_falling_speed = 50.0
metadata/_custom_type_script = "uid://byikc5yvpboxi"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lkiy7"]
radius = 6.0
height = 70.0

[sub_resource type="AtlasTexture" id="AtlasTexture_q6urs"]
atlas = ExtResource("11_r68wp")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftwfq"]
atlas = ExtResource("11_r68wp")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yo34"]
atlas = ExtResource("11_r68wp")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_smtlo"]
atlas = ExtResource("11_r68wp")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_356g5"]
atlas = ExtResource("11_r68wp")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_6q5bf"]
atlas = ExtResource("11_r68wp")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_8a18t"]
atlas = ExtResource("11_r68wp")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_wllim"]
atlas = ExtResource("11_r68wp")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gnyt"]
atlas = ExtResource("11_r68wp")
region = Rect2(3000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebki3"]
atlas = ExtResource("11_r68wp")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4twv"]
atlas = ExtResource("11_r68wp")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7yyj"]
atlas = ExtResource("11_r68wp")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcg62"]
atlas = ExtResource("12_lkiy7")
region = Rect2(0, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf8tf"]
atlas = ExtResource("12_lkiy7")
region = Rect2(1000, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_nufue"]
atlas = ExtResource("12_lkiy7")
region = Rect2(1000, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkiy7"]
atlas = ExtResource("12_lkiy7")
region = Rect2(0, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbgiv"]
atlas = ExtResource("12_lkiy7")
region = Rect2(1000, 2000, 1000, 1000)

[sub_resource type="SpriteFrames" id="SpriteFrames_mcg62"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6urs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftwfq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yo34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smtlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_356g5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6q5bf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a18t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wllim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gnyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebki3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4twv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7yyj")
}],
"loop": true,
"name": &"WoltyIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcg62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf8tf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nufue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkiy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbgiv")
}],
"loop": true,
"name": &"WoltyRun",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_dfeyu"]
radius = 16.1245

[node name="CharacterBody2D" type="CharacterBody2D" node_paths=PackedStringArray("state_machine", "status_manager", "health_component") groups=["player"]]
scale = Vector2(0.75, 0.75)
script = ExtResource("1_7ig0a")
stats = SubResource("Resource_r68wp")
state_machine = NodePath("StateMachine")
status_manager = NodePath("StatusEffectManager")
health_component = NodePath("Health")

[node name="GPUParticles2D" type="CPUParticles2D" parent="."]
modulate = Color(1, 0.72, 0.72, 1)
z_index = 1
position = Vector2(0, 32)
emitting = false
amount = 50
lifetime = 0.1
one_shot = true
fixed_fps = 30
draw_order = 1
direction = Vector2(0, -1)
spread = 87.92
initial_velocity_max = 312.88
angular_velocity_min = -180.0
angular_velocity_max = -180.0

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 524288
visible = false
texture_filter = 1
texture = ExtResource("2_lcuhw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_lkiy7")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -40)
zoom = Vector2(2, 2)
position_smoothing_enabled = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("inital_state")]
script = ExtResource("3_rguqb")
inital_state = NodePath("Idle_State")
metadata/_custom_type_script = "uid://c1fthtfbmc1rp"

[node name="Idle_State" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("4_fwsyb")
player = NodePath("../..")
metadata/_custom_type_script = "uid://b584csyxnnyk8"

[node name="Running_State" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("5_25pii")
player = NodePath("../..")
metadata/_custom_type_script = "uid://dnvtpbhkddiyk"

[node name="Jumping_State" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("6_exdhi")
player = NodePath("../..")
metadata/_custom_type_script = "uid://4g2vde2305m7"

[node name="Falling_State" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("7_25pii")
player = NodePath("../..")
metadata/_custom_type_script = "uid://cjyq8fcyxoh4v"

[node name="Attack_State" type="Node" parent="StateMachine"]
script = ExtResource("9_r68wp")

[node name="StatusEffectManager" type="Node" parent="."]
script = ExtResource("8_exdhi")
metadata/_custom_type_script = "uid://dp74djouk71ts"

[node name="Health" type="Node" parent="."]
script = ExtResource("9_r87yu")
max_health = 3

[node name="DealDamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DealDamageArea"]
position = Vector2(32, 0)
shape = SubResource("CircleShape2D_dfeyu")

[node name="Sprite2D" type="Sprite2D" parent="DealDamageArea"]
position = Vector2(32, 0)
scale = Vector2(0.25, 0.25)
texture = ExtResource("14_4yo34")
hframes = 14
vframes = 16

[node name="Label" type="Label" parent="."]
offset_left = -21.3335
offset_top = -64.0
offset_right = 18.6665
offset_bottom = -41.0

[node name="DirectionChangeParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, 32)
emitting = false
amount = 20
texture = ExtResource("14_ftwfq")
lifetime = 0.2
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_q6urs")

[node name="JumpParticles" type="GPUParticles2D" parent="."]
texture_filter = 1
position = Vector2(0, 32)
emitting = false
amount = 20
texture = ExtResource("14_ftwfq")
lifetime = 0.2
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_ftwfq")

[node name="GlideParticles" type="GPUParticles2D" parent="."]
texture_filter = 1
position = Vector2(0, 32)
emitting = false
amount = 10
texture = ExtResource("14_ftwfq")
lifetime = 0.2
process_material = SubResource("ParticleProcessMaterial_ftwfq")

[node name="ShootingPoint" type="Node2D" parent="."]
position = Vector2(32, 0)

[node name="Left Inner" type="RayCast2D" parent="."]
position = Vector2(-8, -24)
rotation = 3.14159

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(3, -6)
scale = Vector2(0.089, 0.0805)
sprite_frames = SubResource("SpriteFrames_mcg62")
animation = &"WoltyRun"
autoplay = "WoltyIdle"
frame = 2
frame_progress = 0.554278
